@@ -1,3 +1,8 @@
+Fri Mar  2 22:51:55 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
+
+	* unix/features.c (__sfix_default): Remove "a".
+	* common/riscosify.c (__sfix_default): Likewise.
+
 Sat Feb 18 11:44:27 GMT 2012  Lee Noar  <leenoar@sky.com>
 
 	* unistd/symlink.c(symlink): More compact code and better
